--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       class="bg-emerald-300 row-span-2 flex flex-col justify-between py-5 px-2"
     >
       <h1 class="text-2xl font-bold px-6">Calculadora de investimentos</h1>
-      <form class="w-full">
+      <form id="investment-form" class="w-full">
         <!-- Investimento inicial -->
         <div class="flex w-full flex-col px-6 my-2">
           <label for="starting-amount" class="font-bold text-gray-700"
@@ -29,7 +29,9 @@
               type="text"
               class="w-5/6 rounded-r-lg px-2"
               placeholder="0.00"
+              required
               id="starting-amount"
+              name="starting-amount"
             />
           </div>
         </div>
@@ -50,6 +52,7 @@
               class="w-5/6 rounded-r-lg px-2"
               placeholder="0.00"
               id="additional-contribution"
+              name="additional-contribution"
             />
           </div>
         </div>
@@ -61,10 +64,13 @@
               type="text"
               class="w-2/3 rounded-l-lg px-2"
               placeholder="0"
+              required
               id="time-amount"
+              name="time-amount"
             />
             <select
               id="time-amount-period"
+              name="time-amount-period"
               class="w-1/3 rounded-r-lg border-l-2 border-emerald-600 text-center hover:bg-emerald-950 hover:text-slate-200"
             >
               <option value="monthly">Mensal</option>
@@ -89,10 +95,13 @@
               type="text"
               class="w-1/2 px-2"
               placeholder="0"
+              required
               id="return-rate"
+              name="return-rate"
             />
             <select
               id="evaluation-period"
+              name="evaluation-period"
               class="w-1/3 rounded-r-lg border-l-2 border-emerald-600 text-center hover:bg-emerald-950 hover:text-slate-200"
             >
               <option value="monthly">Mensal</option>
@@ -116,13 +125,18 @@
               type="text"
               class="w-5/6 rounded-r-lg px-2"
               placeholder="0"
+              required
               id="tax-rate"
+              name="tax-rate"
             />
           </div>
         </div>
       </form>
       <div class="flex h-12 px-6 my-8 w-full gap-2">
         <button
+          id="calculate-results"
+          type="submit"
+          form="investment-form"
           class="w-1/2 rounded-lg bg-emerald-950 text-slate-200 hover:bg-emerald-800"
         >
           Calcular
@@ -133,5 +147,6 @@
     <main>
       <p>Resultados</p>
     </main>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
