--- a/index.html
+++ b/index.html
@@ -156,8 +156,18 @@
     </aside>
 
     <!-- inicio do main -->
-    <main>
-      <p>Resultados</p>
+    <main class="h-full">
+      <!-- <p>Resultados</p> -->
+      <section id="charts-container">
+        <div class="h-[36dvh]">
+          <p>Resultado Final</p>
+          <canvas id="final-money-distribution"></canvas>
+        </div>
+        <div class="h-[56dvh]">
+          <p>Progressão</p>
+          <canvas id="progression"></canvas>
+        </div>
+      </section>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
