--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
     </aside>
 
     <!-- inicio do main -->
-    <main class="h-full">
+    <main class="row-span-2 col-span-2">
       <!-- <p>Resultados</p> -->
-      <section id="charts-container">
-        <div class="h-[36dvh]">
-          <p>Resultado Final</p>
+      <section id="charts-container" class="h-full">
+        <div class="h-[36%] flex flex-col items-center pb-10">
+          <p class="font-bold text-lg">Resultado Final</p>
           <canvas id="final-money-distribution"></canvas>
         </div>
-        <div class="h-[56dvh]">
-          <p>Progressão</p>
+        <div class="h-[56%] flex flex-col items-center pb-1">
+          <p class="font-bold text-lg">Progressão</p>
           <canvas id="progression"></canvas>
         </div>
       </section>
