--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     <!-- inicio do main -->
     <main class="row-span-2 col-span-2">
       <!-- <p>Resultados</p> -->
-      <section id="charts-container" class="h-full">
+      <!-- <section id="charts-container" class="h-full">
         <div class="h-[36%] flex flex-col items-center pb-10">
           <p class="font-bold text-lg">Resultado Final</p>
           <canvas id="final-money-distribution"></canvas>
@@ -167,7 +167,7 @@
           <p class="font-bold text-lg">Progressão</p>
           <canvas id="progression"></canvas>
         </div>
-      </section>
+      </section> -->
     </main>
     <script type="module" src="./main.js"></script>
   </body>
