Implementada a funcionalidade carousel

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./src/style.css" />
     <title>Calculadora Investimentos Impressionador</title>
   </head>
-  <body class="h-dvh grid gap-4 grid-cols-3 grid-rows-2">
+  <body class="h-dvh grid gap-0 grid-cols-3 grid-rows-2">
     <!-- inicio do aisde -->
     <aside
       class="bg-emerald-300 row-span-2 flex flex-col justify-between py-5 px-2"
@@ -156,18 +156,45 @@
     </aside>
 
     <!-- inicio do main -->
-    <main class="row-span-2 col-span-2">
+    <main class="row-span-2 col-span-2 relative">
       <!-- <p>Resultados</p> -->
-      <!-- <section id="charts-container" class="h-full">
-        <div class="h-[36%] flex flex-col items-center pb-10">
-          <p class="font-bold text-lg">Resultado Final</p>
-          <canvas id="final-money-distribution"></canvas>
-        </div>
-        <div class="h-[56%] flex flex-col items-center pb-1">
-          <p class="font-bold text-lg">Progressão</p>
-          <canvas id="progression"></canvas>
-        </div>
-      </section> -->
+      <button
+        id="slide-arrow-previous"
+        class="absolute top-0 bottom-0 left-0 text-5xl cursor-pointer bg-slate-200 opacity-50 w-6 hover:opacity-100 focus:opacity-100"
+      >
+        &#8249;
+      </button>
+      <button
+        id="slide-arrow-next"
+        class="absolute top-0 bottom-0 right-0 text-5xl cursor-pointer bg-slate-200 opacity-50 w-6 hover:opacity-100 focus:opacity-100"
+      >
+        &#8250;
+      </button>
+      <div
+        id="carousel"
+        class="h-full w-full flex overflow-x-auto scroll-smooth"
+      >
+        <section id="charts-container" class="h-full basis-full shrink-0">
+          <div class="h-[36%] flex flex-col items-center pb-10">
+            <p class="font-bold text-lg">Resultado Final</p>
+            <canvas id="final-money-distribution"></canvas>
+          </div>
+          <div class="h-[56%] flex flex-col items-center pb-1">
+            <p class="font-bold text-lg">Progressão</p>
+            <canvas id="progression"></canvas>
+          </div>
+        </section>
+        <section
+          id="table-container"
+          class="h-full overflow-y-auto basis-full shrink-0"
+        >
+          <p class="font-bold text-lg text-center">Resultados Mensais</p>
+          <table
+            id="results-table"
+            class="w-full max-h-full border border-separate"
+          ></table>
+        </section>
+      </div>
     </main>
     <script type="module" src="./main.js"></script>
   </body>
